Finished Swagger
