# src/app/modules/airplanes/airplanes.router.ts
@@ -10,30 +10,33 @@ const router = Router();
  *
  * @openapi
  *
- * paths:
- *   /airplanes:
- *     get:
- *       tags:
- *         - Airplanes
- *       summary: Get all airplanes
- *       description: Get all airplanes.
- *       responses:
- *         200:
- *           description: Airplanes were successfully received.
- *           content:
- *             application/json:
- *               schema:
- *                 type: "array"
- *                 items:
- *                   $ref: "#/components/schemas/Airplane"
- *         400:
- *           $ref: "#/components/responses/400"
- *         401:
- *           $ref: "#/components/responses/401"
- *         403:
- *           $ref: "#/components/responses/403"
- *         500:
- *           $ref: "#/components/responses/500"
+ * /airplanes:
+ *   get:
+ *     tags:
+ *       - "Airplanes"
+ *     summary: "Get all airplanes"
+ *     description: ""
+ *     responses:
+ *       "200":
+ *         description: ""
+ *         content:
+ *           application/json:
+ *             schema:
+ *               type: "array"
+ *               items:
+ *                 $ref: "#/components/schemas/Airplane"
+ *       "400":
+ *         $ref: "#/components/responses/400"
+ *       "401":
+ *         $ref: "#/components/responses/401"
+ *       "403":
+ *         $ref: "#/components/responses/403"
+ *       "404":
+ *         $ref: "#/components/responses/404"
+ *       "500":
+ *         $ref: "#/components/responses/500"
+ *     security:
+ *       - bearerAuth: []
  */
 router.get(
   '/',
@@ -46,37 +49,39 @@ router.get(
  *
  * @openapi
  *
- * paths:
- *   /airplanes/{id}:
- *     get:
- *       tags:
- *         - Airplanes
- *       summary: Get airplane by id
- *       description: Get airplane by id.
- *       parameters:
- *         - name: id
- *           in: path
- *           description: Airplane id
- *           schema:
- *             type: "string"
- *             required: true
- *       responses:
- *         200:
- *           description: Airplane found successfully.
- *           content:
- *             application/json:
- *               schema:
- *                 $ref: "#/components/schemas/Airplane"
- *         400:
- *           $ref: "#/components/responses/400"
- *         401:
- *           $ref: "#/components/responses/401"
- *         403:
- *           $ref: "#/components/responses/403"
- *         404:
- *           $ref: "#/components/responses/404"
- *         500:
- *           $ref: "#/components/responses/500"
+ * /airplanes/{id}:
+ *   get:
+ *     tags:
+ *       - "Airplanes"
+ *     summary: "Get an airplane details"
+ *     description: ""
+ *     operationId: "findAirplanesByTags"
+ *     parameters:
+ *       - name: "id"
+ *         in: "path"
+ *         description: "Airplane id"
+ *         schema:
+ *           type: "string"
+ *         required: true
+ *     responses:
+ *       "200":
+ *         description: ""
+ *         content:
+ *           application/json:
+ *             schema:
+ *               $ref: "#/components/schemas/Airplane"
+ *       "400":
+ *         $ref: "#/components/responses/400"
+ *       "401":
+ *         $ref: "#/components/responses/401"
+ *       "403":
+ *         $ref: "#/components/responses/403"
+ *       "404":
+ *         $ref: "#/components/responses/404"
+ *       "500":
+ *         $ref: "#/components/responses/500"
+ *     security:
+ *       - bearerAuth: []
  */
 router.get(
   '/:id',
@@ -89,45 +94,46 @@ router.get(
  *
  * @openapi
  *
- * paths:
- *   /airplanes:
- *     post:
- *       security:
- *         - bearerAuth: []
- *       tags:
- *         - Airplanes
- *       summary: Create airplane
- *       description: Adds a new airplane.
- *       requestBody:
+ * /airplanes:
+ *   post:
+ *     tags:
+ *       - "Airplanes"
+ *     summary: "Add a new Airplane"
+ *     description: ""
+ *     operationId: "addAirplane"
+ *     requestBody:
+ *       description: "New airplane added."
+ *       required: true
+ *       content:
+ *         application/json:
+ *           schema:
+ *             type: "object"
+ *             properties:
+ *               name:
+ *                 type: "string"
+ *               seats:
+ *                 type: "number"
+ *               fuelCapacity:
+ *                 type: "number"
+ *     responses:
+ *       "200":
+ *         description: ""
  *         content:
  *           application/json:
  *             schema:
- *               required:
- *                 - name
- *                 - seats
- *                 - fuelCapacity
- *               properties:
- *                 name:
- *                   type: string
- *                 seats:
- *                   type: number
- *                 fuelCapacity:
- *                   type: number
- *       responses:
- *         201:
- *           description: Airplane created successfully.
- *           content:
- *             application/json:
- *               schema:
- *                 $ref: "#/components/schemas/Airplane"
- *         400:
- *           $ref: "#/components/responses/400"
- *         401:
- *           $ref: "#/components/responses/401"
- *         403:
- *           $ref: "#/components/responses/403"
- *         500:
- *           $ref: "#/components/responses/500"
+ *               $ref: "#/components/schemas/Airplane"
+ *       "400":
+ *         $ref: "#/components/responses/400"
+ *       "401":
+ *         $ref: "#/components/responses/401"
+ *       "403":
+ *         $ref: "#/components/responses/403"
+ *       "422":
+ *         $ref: "#/components/responses/422"
+ *       "500":
+ *         $ref: "#/components/responses/500"
+ *     security:
+ *       - bearerAuth: []
  */
 router.post(
   '/',
@@ -140,33 +146,53 @@ router.post(
  *
  * @openapi
  *
- * paths:
- *   /airplanes/{id}:
- *     put:
- *       security:
- *         - bearerAuth: []
- *       tags:
- *         - Airplanes
- *       summary: Upadate airplane by id
- *       description: Update airplane by id.
- *       parameters:
- *         - name: id
- *           in: path
- *           description: Airplane id
+ * /airplanes/{id}:
+ *   put:
+ *     tags:
+ *       - "Airplanes"
+ *     summary: "Update an existing airplanes"
+ *     description: ""
+ *     operationId: "updateAirplanes"
+ *     parameters:
+ *       - in: "path"
+ *         name: "id"
+ *         description: "Airplane id"
+ *         schema:
+ *           type: "string"
+ *         required: true
+ *     requestBody:
+ *       description: "Airplane object that needs to be updated"
+ *       required: true
+ *       content:
+ *         application/json:
  *           schema:
- *             type: "string"
- *             required: true
- *       responses:
- *         204:
- *           description: Airplane updated successfully.
- *         400:
- *           $ref: "#/components/responses/400"
- *         401:
- *           $ref: "#/components/responses/401"
- *         403:
- *           $ref: "#/components/responses/403"
- *         500:
- *           $ref: "#/components/responses/500"
+ *             type: "object"
+ *             properties:
+ *               name:
+ *                 type: "string"
+ *               seats:
+ *                 type: "number"
+ *               fuelCapacity:
+ *                 type: "number"
+ *     responses:
+ *       "200":
+ *         description: ""
+ *         content:
+ *           application/json:
+ *             schema:
+ *               $ref: "#/components/schemas/Airplane"
+ *       "400":
+ *         $ref: "#/components/responses/400"
+ *       "401":
+ *         $ref: "#/components/responses/401"
+ *       "403":
+ *         $ref: "#/components/responses/403"
+ *       "404":
+ *         $ref: "#/components/responses/404"
+ *       "500":
+ *         $ref: "#/components/responses/500"
+ *     security:
+ *       - bearerAuth: []
  */
 router.put(
   '/:id',
@@ -183,33 +209,35 @@ router.put(
  *
  * @openapi
  *
- * paths:
- *   /airplanes/{id}:
- *     delete:
- *       security:
- *         - bearerAuth: []
- *       tags:
- *         - Airplanes
- *       summary: Delete airplane by id
- *       description: Delete airplane by id.
- *       parameters:
- *         - name: id
- *           in: path
- *           description: Airplane id
- *           schema:
- *             type: "string"
- *             required: true
- *       responses:
- *         204:
- *           description: Airplane deleted successfully.
- *         400:
- *           $ref: "#/components/responses/400"
- *         401:
- *           $ref: "#/components/responses/401"
- *         403:
- *           $ref: "#/components/responses/403"
- *         500:
- *           $ref: "#/components/responses/500"
+ * /airplanes/{id}:
+ *   delete:
+ *     tags:
+ *       - "Airplanes"
+ *     summary: "Deletes an airplane"
+ *     description: ""
+ *     operationId: "deleteAirplanes"
+ *     parameters:
+ *       - in: "path"
+ *         name: "id"
+ *         description: "Airplane id to delete"
+ *         required: true
+ *         schema:
+ *           type: "string"
+ *     responses:
+ *       "204":
+ *         description: "Airplane successfully deleted"
+ *       "400":
+ *         $ref: "#/components/responses/400"
+ *       "401":
+ *         $ref: "#/components/responses/401"
+ *       "403":
+ *         $ref: "#/components/responses/403"
+ *       "404":
+ *         $ref: "#/components/responses/404"
+ *       "500":
+ *         $ref: "#/components/responses/500"
+ *     security:
+ *       - bearerAuth: []
  */
 router.delete(
   '/:id',
